@@ -18,7 +18,6 @@ import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -46,16 +45,15 @@ public class ChatService {
         this.webPushSender = webPushSender;
     }
 
-    /** 내가 속한 채팅 스레드(방 목록) */
+    /** Threads for the given user (participates as client or manager) */
     @Transactional(readOnly = true)
     public List<ChatThreadResponse> getThreadsForUser(Long userId) {
-        return chatRoomRepository.findAll().stream()
-                .filter(room -> room.getClient().getId().equals(userId) || room.getManager().getId().equals(userId))
+        return chatRoomRepository.findByClient_IdOrManager_Id(userId, userId).stream()
                 .map(ChatThreadResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /** 메시지 전송 */
+    /** Send message inside a room */
     public ChatMessageResponse sendMessage(ChatMessageRequest request) {
         ChatRoom room = chatRoomRepository
                 .findById(request.roomId())
@@ -64,7 +62,7 @@ public class ChatService {
 
         if (!room.getClient().getId().equals(sender.getId())
                 && !room.getManager().getId().equals(sender.getId())) {
-            throw new GuardianException(HttpStatus.FORBIDDEN, "채팅방에 참여한 사용자만 메시지를 보낼 수 있습니다.");
+            throw new GuardianException(HttpStatus.FORBIDDEN, "채팅방 참가자만 메시지를 보낼 수 있습니다.");
         }
 
         ChatMessage message = ChatMessage.builder()
@@ -82,7 +80,7 @@ public class ChatService {
         return ChatMessageResponse.from(saved);
     }
 
-    /** 특정 방의 전체 메시지(오름차순) */
+    /** Full message history ordered by sent time */
     @Transactional(readOnly = true)
     public List<ChatMessageResponse> getMessages(Long roomId, Long userId) {
         ChatRoom room = chatRoomRepository
@@ -92,10 +90,10 @@ public class ChatService {
 
         return chatMessageRepository.findByRoomIdOrderBySentAtAsc(roomId).stream()
                 .map(ChatMessageResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /** 스레드 읽음 처리 */
+    /** Mark thread as read */
     public void markThreadAsRead(Long roomId, Long userId) {
         ChatRoom room = chatRoomRepository
                 .findById(roomId)
@@ -105,14 +103,14 @@ public class ChatService {
         } else if (room.getManager().getId().equals(userId)) {
             room.markAsReadByManager();
         } else {
-            throw new GuardianException(HttpStatus.FORBIDDEN, "채팅방에 참여한 사용자만 읽음 처리가 가능합니다.");
+            throw new GuardianException(HttpStatus.FORBIDDEN, "채팅방 참가자만 읽음 처리가 가능합니다.");
         }
     }
 
-    /** (추가) 방 개설 또는 기존 방 반환 */
+    /** Create room or return existing */
     public ChatRoom openOrGetRoom(Long clientId, Long managerId) {
         if (clientId.equals(managerId)) {
-            throw new GuardianException(HttpStatus.BAD_REQUEST, "클라이언트와 매니저가 동일할 수 없습니다.");
+            throw new GuardianException(HttpStatus.BAD_REQUEST, "클라이언트와 매니저가 같을 수 없습니다.");
         }
 
         User client = getUser(clientId);
@@ -124,26 +122,17 @@ public class ChatService {
                     ChatRoom newRoom = ChatRoom.builder()
                             .client(client)
                             .manager(manager)
-                            .readByClient(true)   // 생성 시점엔 둘 다 읽음 상태로 시작해도 무방
-                            .readByManager(true) // (요건에 맞게 조정 가능)
+                            .readByClient(true)
+                            .readByManager(true)
                             .build();
                     return chatRoomRepository.save(newRoom);
                 });
     }
 
-    /** (추가) 단일 방 조회 */
     @Transactional(readOnly = true)
     public ChatRoom getRoom(Long roomId) {
-        ChatRoom room = chatRoomRepository.findById(roomId)
+        return chatRoomRepository.findById(roomId)
                 .orElseThrow(() -> new GuardianException(HttpStatus.NOT_FOUND, "채팅방을 찾을 수 없습니다."));
-        return room;
-    }
-
-    // ---- 내부 유틸 ----
-    private User getUser(Long userId) {
-        return userRepository
-                .findById(userId)
-                .orElseThrow(() -> new GuardianException(HttpStatus.NOT_FOUND, "사용자를 찾을 수 없습니다."));
     }
 
     @Transactional(readOnly = true)
@@ -164,19 +153,16 @@ public class ChatService {
         }
         return room.getClient().getEmail();
     }
+
     public void deleteRoom(Long roomId, Long userId) {
         ChatRoom room = chatRoomRepository.findById(roomId)
                 .orElseThrow(() -> new GuardianException(HttpStatus.NOT_FOUND, "채팅방을 찾을 수 없습니다."));
 
-        // ✅ 권한: 방에 속한 사람만 삭제 가능(둘 중 아무나)
         if (!(room.getClient().getId().equals(userId) || room.getManager().getId().equals(userId))) {
-            throw new GuardianException(HttpStatus.FORBIDDEN, "해당 방 참여자만 삭제할 수 있습니다.");
+            throw new GuardianException(HttpStatus.FORBIDDEN, "해당 방 참가자만 삭제할 수 있습니다.");
         }
 
-        // ✅ 메시지 먼저 제거(외래키 제약 대비)
         chatMessageRepository.deleteByRoomId(roomId);
-
-        // ✅ 방 제거
         chatRoomRepository.delete(room);
     }
 
@@ -193,8 +179,14 @@ public class ChatService {
             throw new GuardianException(HttpStatus.FORBIDDEN, "채팅방 접근 권한이 없습니다.");
         }
         if (!room.getClient().getId().equals(userId) && !room.getManager().getId().equals(userId)) {
-            throw new GuardianException(HttpStatus.FORBIDDEN, "채팅방에 참여한 사용자만 접근할 수 있습니다.");
+            throw new GuardianException(HttpStatus.FORBIDDEN, "채팅방 참여자만 접근할 수 있습니다.");
         }
+    }
+
+    private User getUser(Long userId) {
+        return userRepository
+                .findById(userId)
+                .orElseThrow(() -> new GuardianException(HttpStatus.NOT_FOUND, "사용자를 찾을 수 없습니다."));
     }
 
     private void notifyCounterpart(ChatRoom room, User sender, ChatMessage message) {
@@ -252,7 +244,7 @@ public class ChatService {
             case IMAGE -> "사진이 도착했습니다.";
             case FILE -> "파일이 도착했습니다.";
             case NOTICE -> safeContent(message.getContent());
-            case CALL_START -> "영상통화 요청이 도착했습니다.";
+            case CALL_START -> "화상통화 요청이 도착했습니다.";
             case CALL_END -> "통화가 종료되었습니다.";
             case TEXT -> safeContent(message.getContent());
         };
